<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="bbs.jingmiao.cn.educationstoryapplication.fragment.UserCenterFragment">

    <!--  标题  -->
    <LinearLayout
        android:id="@+id/no_usercenter_title_layout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/nav_bg"
        android:layout_alignParentTop="true"
        >

        <TextView
            android:id="@+id/bar_top_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/usercenter_top_title"
            android:textColor="@color/white"
            android:gravity="center"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/no_use_input_login_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="45dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_below="@id/no_usercenter_title_layout"
       >

        <EditText
            android:id="@+id/user_account_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_accout_edit"
            android:padding="10dp"
            android:inputType="text"
            android:drawableLeft="@drawable/login_image_user"
            android:background="@drawable/bg_edittext"
            />

        <EditText
            android:id="@+id/user_password_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:inputType="textPassword"
            android:drawableLeft="@drawable/login_image_pwd"
            android:background="@drawable/bg_edittext"
            android:hint="@string/prompt_password_edit"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_below="@id/no_use_input_login_layout">
        <Button
            android:id="@+id/register_User_Btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:text="@string/register_button"
            style="?android:attr/buttonStyle"
            android:textColor="@color/register_button_text_color"
            android:background="@drawable/register_btn_selector"
            />
        <Button
            android:id="@+id/login_Btn_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:text="@string/login_button"
            style="?android:attr/buttonStyle"
            android:textColor="@color/white"
            android:background="@color/login_button_color"
            />
    </LinearLayout>
</RelativeLayout>
